--- a/backbone-spa-ui/static/css/main.css
+++ b/backbone-spa-ui/static/css/main.css
@@ -31,7 +31,7 @@ button, input, textarea {
 .logo img { margin: 7px auto; width: 77px; height: 34px; }
 
 .search {
-    padding: 13px 0px;
+    padding: 8px 0px;
     width: 100%;
 }
 
@@ -102,14 +102,120 @@ li a.time {
 
 .list-video {
     background: #f1f1f1;
+    height: 100vh;
+    padding-top: 30px;
+    margin-left: 250px;
+}
+.list-video .text .title {
+    font-weight: 700;
+}
+.list-video ul {
+    margin: 0 auto;
+}
+.list-video ul li.list-group-item {
+    position: relative;
+    display: table;
+    padding: 10px 15px;
+    margin-bottom: 0px;
+    background-color: #fff;
+    border-bottom: 1px solid #ddd;
+    width: 80%;
+    margin: 0 auto;
+}
+.preview {
+    float: left;
+    padding-right: 10px;
 }
 
+.sidebar {
+    position: fixed;
+    width: 250px;
+}
 
+/* SEARCH */
+#head-search {
+    margin-top: 3px;
+    max-width: 650px;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+}
 
+#masthead-search .search-btn-component, #head-search .search-btn-component .start {
+    border-left: 0;
+    -moz-border-radius-topleft: 0;
+    border-top-left-radius: 0;
+    -moz-border-radius-bottomleft: 0;
+    border-bottom-left-radius: 0;
+}
 
+#head-search .search-btn-component .yt-button-content {
+    border: none;
+    display: block;
+    opacity: .6;
+    padding: 0;
+    text-indent: -10000px;
+    background: no-repeat url(//s.ytimg.com/yts/imgbin/www-hitchhiker-vflVAomqi.webp) 0 -738px;
+    background-size: auto;
+    width: 15px;
+    height: 15px;
+    box-shadow: none;
+}
 
+#yt-head .search-btn-component .yt-button-content {
+    margin: 0 25px;
+}
 
+#head-search-terms {
+    background-color: #fff;
+    font-size: 14px;
+    height: 29px;
+    line-height: 30px;
+    margin: 0 0 2px;
+    overflow: hidden;
+    position: relative;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -moz-transition: border-color .2s ease;
+    -webkit-transition: border-color .2s ease;
+    transition: border-color .2s ease;
+}
 
+.head-search-terms-border {
+    border: 1px solid #ccc;
+    box-shadow: inset 0 1px 2px #eee;
+}
 
+#head-search-terms input {
+    background: transparent;
+    border: 0;
+    display: inline-block;
+    font-size: 16px;
+    height: 100%;
+    left: 0;
+    margin: 0;
+    outline: none;
+    padding: 2px 6px;
+    position: absolute;
+    width: 100%;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
-
+.yt-button {
+    display: inline-block;
+    height: 28px;
+    border: solid 1px transparent;
+    padding: 0 10px;
+    outline: 0;
+    font-weight: 500;
+    font-size: 11px;
+    text-decoration: none;
+    white-space: nowrap;
+    word-wrap: normal;
+    line-height: normal;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 2px;
+    box-shadow: 0 1px 0 rgba(0,0,0,0.05);
+}
