--- a/backbone-spa-ui/static/css/main-page-style.css
+++ b/backbone-spa-ui/static/css/main-page-style.css
@@ -253,3 +253,7 @@ button, input, textarea {
 	background: #fff url('/static/img/channel.png') top 3px left 0px no-repeat;
     padding-left: 30px;
 }
+
+.details {
+    margin-left: 250px;
+}
