Create Comments module. Delete subviews.

--- a/backbone-spa-ui/static/css/main-page-style.css
+++ b/backbone-spa-ui/static/css/main-page-style.css
@@ -62,6 +62,11 @@ textarea {
 .content {
     margin-top: 50px;
 }
+
+.sidebar {
+    background: #fff;
+}
+
 .sidebar-menu {
     background: none;
     padding: 10px;
